Fix gap between draggable toolbars and resizable handles.

--- a/src/stylesheets/components/_list-view.scss
+++ b/src/stylesheets/components/_list-view.scss
@@ -6,7 +6,7 @@
   flex: 1 1 auto;
   display: flex;
   flex-direction: column;
-  padding: 0 $space-min;
+  padding: $space-min $space-min 0;
 
   .list-head {
     box-sizing: content-box;
