--- a/src/stylesheets/components/_panel-group.scss
+++ b/src/stylesheets/components/_panel-group.scss
@@ -18,6 +18,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    padding-top: $space-min;
   }
 
   .panel + .panel {
