--- a/src/stylesheets/components/_sidebar.scss
+++ b/src/stylesheets/components/_sidebar.scss
@@ -13,6 +13,7 @@
   .resizable-container {
     flex: 1 1 auto;
     position: relative;
+    padding-top: $space-min;
   }
 
   h2 {
